# zettelkasten-ki

./: .gitignore  README.md  core.py  main.py  pyproject.toml
