[project]
name = "zettelkasten-ki"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.15",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-huggingface>=0.3.0",
    "langchain-ollama>=0.3.5",
    "ollama>=0.5.1",
    "sentence-transformers>=5.0.0",
]
